build uberjar for deployment